# detex

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  _typos.toml  index.html  jacobian_sparsity.py  jacobian_sparsity_jax.md  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json  settings.local.json
.claude/commands/: pr.md
.github/workflows/: ci.yml  publish.yml  release.yml
context/: jacobian_sparsity_jax.md
dev/bench/: data.js  index.html
docs/: CLAUDE.md  contributing.md  getting-started.md  index.md
docs/explanation/: asd.md  coloring.md  global-sparsity.md  index.md  pipeline.md  sparsity-detection.md
docs/how-to/: brusselator.md  hessians.md  index.md  jacobians.md
docs/reference/: api.md  coloring.md  data-structures.md  hessian.md  index.md  jacobian.md
docs/stylesheets/: extra.css
docs/tutorials/: getting-started.md
examples/: brusselator.py
explanation/asd/: index.html
explanation/coloring/: index.html
explanation/global-sparsity/: index.html
explanation/sparsity-detection/: index.html
how-to/brusselator/: index.html
how-to/hessians/: index.html
how-to/jacobians/: index.html
reference/: index.html
reference/coloring/: index.html
reference/data-structures/: index.html
reference/hessian/: index.html
reference/jacobian/: index.html
reference/sparsity/: index.html
search/: search_index.json
src/asdex/: __init__.py  _display.py  coloring.py  decompression.py  modes.py  (+3 more)
tests/: CLAUDE.md  __init__.py  conftest.py  test_benchmarks.py  test_bitset.py  test_coloring.py  test_control_flow.py  test_cutest.py  test_decompression.py  test_detection.py  test_flax.py  test_jacobian_sparsity.py  test_modes.py  test_multidim.py  test_pattern.py  test_scalar.py  test_sct.py  test_sparse_jacobian.py  test_sympy.py  test_verify.py  test_vmap.py
(+265 files in other folders)
